# ActivityMonitor

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  login.http
cmake/: dev-mode.cmake  install-rules.cmake  link_qt.cmake  variables.cmake
source/: BrixActivityWatch.rc  CMakeLists.txt  app.qrc  main.cpp
source/core/: brix_activity_watch_global.h
source/httpClient/: CMakeLists.txt  brix_client.cpp  brix_client.h  brix_client_request.hpp  brixclient.cpp  brixclient.h
source/utils/: CMakeLists.txt  better_enum.h  enum.h  helper_ui.cpp  helper_ui.h  macros.h  macutilities.h  macutilities.mm  safequeue.h  sqlite3.h  sqlite_orm.h
source/view/: CMakeLists.txt  logindialog.cpp  logindialog.h  logindialog.ui  manager.cpp  manager.h
source/watcher/: CMakeLists.txt  afkwatcher.cpp  afkwatcher.h  appnamewatcher.cpp  appnamewatcher.h  watcher.cpp  watcher.h  windowtitlewatcher.cpp  windowtitlewatcher.h
test/: CMakeLists.txt
